--- a/www/templates/tab-inicio.html
+++ b/www/templates/tab-inicio.html
@@ -1,13 +1,12 @@
-<ion-view view-title="Inicio">
+<ion-view view-title="Citas Creadas">
   <ion-content>
     <ion-list>
-          <h2 class="title">Citas Creadas</h2>
           <div class="row header">
             <div class="col">Fecha y Hora</div>
             <div class="col">Servicio</div>
             <div class="col">Vehículo</div>
           </div>
-          <div class="row" ng-repeat="cita in citas" ng-click="editarCita(cita.id)">
+          <div class="row" ng-repeat="cita in citas" ng-click="editarCita(cita)">
             <div class="col">{{cita.Fecha | date : 'dd/MM/yyyy - h:mma'}}</div>
             <div class="col">{{cita.Tipo[0]}}</div>
             <div class="col">{{cita.DetalleVehiculo[0]}}</div>
