--- a/www/templates/tab-cita.html
+++ b/www/templates/tab-cita.html
@@ -6,76 +6,75 @@
       <p>{{cliente.fields.Nombre}}</p>
     </label>
     </div>
-    <form ng-submit="guardarCita()">
+    <form name="citaForm" ng-submit="guardarCita()">
     
-    <div ng-if = "!editandoCita">
-      <label class="item item-input item-select">
-        <div class="input-label">Vehículo</div>
-        <select ng-options="vehiculo as vehiculo.fields.Vehiculo for vehiculo in listaVehiculos" 
-                  ng-model="citaNueva.Vehiculo"></select>
-      </label>
-    </div>
-    <div ng-if = "editandoCita">
-      <label class="item item-input">
-        <div class="input-label">Vehículo</div>
-        <p>{{citaEditar.DetalleVehiculo[0]}}</p>
-    </div>
+      <div ng-if = "!editandoCita">
+        <label class="item item-input item-select">
+          <div class="input-label">Vehículo</div>
+          <select ng-options="vehiculo as vehiculo.fields.Vehiculo for vehiculo in listaVehiculos" name="vehiculo" required 
+                    ng-model="citaNueva.Vehiculo"></select>
+        </label>
+      </div>
+      <div ng-if = "editandoCita">
+        <label class="item item-input">
+          <div class="input-label">Vehículo</div>
+          <p>{{citaEditar.DetalleVehiculo[0]}}</p>
+      </div>
 
-    <div ng-if = "!editandoCita">
-      <label class="item item-input item-select">
-        <div class="input-label">Tipo de Servicio</div>
-        <select ng-options="servicio.fields.Nombre for servicio in servicios" ng-model="serviceSelected" ng-change="servicioSelected(serviceSelected)">{{servicio.fields.Nombre}}</select>
-      </label>
-    </div>
-    <div ng-if = "editandoCita">
-      <label class="item item-input item-select">
-        <div class="input-label">Tipo de Servicio</div>
-        <select ng-options="servicio.fields.Nombre for servicio in servicios" ng-model="editCitaServicio" ng-change="servicioSelected(serviceSelected)">{{editCitaServicio}}</select>
-      </label>
-    </div>
+      <div ng-if = "!editandoCita">
+        <label class="item item-input item-select">
+          <div class="input-label">Tipo de Servicio</div>
+          <select ng-options="servicio.fields.Nombre for servicio in servicios" ng-model="serviceSelected" name="Servicio" required ng-change="servicioSelected(serviceSelected)">{{servicio.fields.Nombre}}</select>
+        </label>
+      </div>
+      <div ng-if = "editandoCita">
+        <label class="item item-input item-select">
+          <div class="input-label">Tipo de Servicio</div>
+          <select ng-options="servicio.fields.Nombre for servicio in servicios" ng-model="editCitaServicio" name="Servicio" required ng-change="servicioSelected(serviceSelected)">{{editCitaServicio}}</select>
+        </label>
+      </div>
 
-    <div ng-if = "!editandoCita"> 
-      <label class="item item-input item-stacked-label">
-        <span class="input-label">Comentarios</span>
-        <textarea ng-model="citaNueva.Comentarios"></textarea>
-      </label>
-    </div>
-    <div ng-if = "editandoCita">
-       <label class="item item-input item-stacked-label">
-         <span class="input-label">Comentarios</span>
-         <textarea ng-model="citaEditar.Comentarios">{{citaEditar.Comentarios}}</textarea>
-       </label>
-    </div>
+      <div ng-if = "!editandoCita"> 
+        <label class="item item-input item-stacked-label">
+          <span class="input-label">Comentarios</span>
+          <textarea ng-model="citaNueva.Comentarios"></textarea>
+        </label>
+      </div>
+      <div ng-if = "editandoCita">
+         <label class="item item-input item-stacked-label">
+           <span class="input-label">Comentarios</span>
+           <textarea ng-model="citaEditar.Comentarios">{{citaEditar.Comentarios}}</textarea>
+         </label>
+      </div>
 
-    <div ng-if = "!editandoCita">
-      <label class="item item-input-inset">
-        <div class="input-label">Fecha</div>
-        <input type="date" required type="date" ng-model="citaNueva.Fecha" ng-change="cambioFecha(citaNueva.Fecha)">
-      </label>
-    </div>
-    <div ng-if = "editandoCita">
-      <label class="item item-input-inset">
-        <div class="input-label">Fecha</div>
-        <input type="date" required type="date" ng-model="citaEditar.Fecha" ng-change="cambioFecha(citaEditar.Fecha)">
-      </label>
-    </div>
-
-    <div ng-if = "!editandoCita">
-      <label class="item item-input item-select">
-        <div class="input-label">Hora</div>
-        <select ng-model="horaNueva" ng-options="hora.hora for hora in horas" ng-change="horaSelected(horaNueva)">
-        </select>
-      </label>
-    </div>
-    <div ng-if = "editandoCita">
-      <label class="item item-input item-select">
-        <div class="input-label">Hora</div>
-        <select ng-model="horaNueva" ng-options="hora.hora for hora in horas" ng-change="horaSelected(horaNueva)">
-        </select>
-      </label>
-    </div>
-
-      <button class="button button-block button-positive" type="submit">Guardar</button>
+      <div ng-if = "!editandoCita">
+        <label class="item item-input-inset">
+          <div class="input-label">Fecha</div>
+          <input type="date" required type="date" ng-model="citaNueva.Fecha" name="fechaCita" required ng-change="cambioFecha(citaNueva.Fecha)">
+        </label>
+      </div>
+      <div ng-if = "editandoCita">
+        <label class="item item-input-inset">
+          <div class="input-label">Fecha</div>
+          <input type="date" required type="date" ng-model="citaEditar.Fecha" ng-change="cambioFecha(citaEditar.Fecha)">
+        </label>
+      </div>
+      <div ng-if = "!editandoCita">
+        <label class="item item-input item-select">
+          <div class="input-label">Hora</div>
+          <select ng-model="horaNueva" ng-options="hora.hora for hora in horas" name="horaCita" ng-change="horaSelected(horaNueva)">
+          </select>
+        </label>
+      </div>
+      <div ng-if = "editandoCita">
+        <label class="item item-input item-select">
+          <div class="input-label">Hora</div>
+          <select ng-model="horaNueva" ng-options="hora.hora for hora in horas" required ng-change="horaSelected(horaNueva)">
+          </select>
+        </label>
+      </div>
+      <span STYLE="color: red; font-size: 10pt" ng-show="horaNueva===0">* Seleccione una hora *</span>
+      <button class="button button-block button-positive" ng-disabled="citaForm.$invalid" type="submit">Guardar</button>
     </form>
   </ion-content>
 </ion-view>
