--- a/www/templates/tab-inicio.html
+++ b/www/templates/tab-inicio.html
@@ -13,4 +13,7 @@
           </div>
     </ion-list>
   </ion-content>
+  <ion-footer-bar class="bar-stable">
+    <h1 class="title">Multiservicios La Margoth - Tel: 2556-8315</h1>
+  </ion-footer-bar>
 </ion-view>
