--- a/www/templates/tab-configuracion.html
+++ b/www/templates/tab-configuracion.html
@@ -8,13 +8,13 @@
 			  <h2 class="title">Cliente</h2>
 			  <label class="item item-input item-stacked-label">
 			  	<span class="input-label">Nombre completo</span>
-			    <input type="text" name="nombre" ng-model="cliente.fields.Nombre" ng-pattern="nameRegex" required>
-			    <span STYLE="color: red; font-size: 10pt" ng-show="clienteForm.nombre.$error.pattern">* Nombre inválido. Ej: Oscar Rojas *</span>
+			    <input type="text" name="nombre" ng-model="cliente.fields.Nombre" ng-maxlength="50" ng-pattern="nameRegex" required>
+			    <span STYLE="color: red; font-size: 10pt" ng-show="clienteForm.nombre.$error.pattern || clienteForm.nombre.$invalid">* Nombre inválido. Ej: Oscar Rojas </span>
 			  </label>
 			  <label class="item item-input item-stacked-label">
 			  	<span class="input-label">Email</span>
-			    <input type="email" name="email" ng-model="cliente.fields.Email" required>
-			    <span STYLE="color: red; font-size: 10pt" ng-show="clienteForm.email.$invalid">* Email inválido. Ej: oscar@yahoo.com *</span>
+			    <input type="email" name="email" ng-model="cliente.fields.Email" ng-maxlength="40" required>
+			    <span STYLE="color: red; font-size: 10pt" ng-show="clienteForm.email.$invalid">* Email inválido. Ej: oscar@yahoo.com </span>
 			  </label>
 			  <label class="item item-input item-stacked-label">
 			  	<span class="input-label">Fecha de Nacimiento</span>
@@ -22,8 +22,8 @@
 			  </label>
 			  <label class="item item-input item-stacked-label">
 			  	<span class="input-label">Teléfono</span>
-			    <input type="tel" name="telefono" ng-model="cliente.fields.Telefono" ng-pattern="telRegex" required>
-			    <span STYLE="color: red; font-size: 10pt" ng-show="clienteForm.telefono.$error.pattern">* Teléfono inválido. Ej: 81234567 *</span>
+			    <input type="tel" name="telefono" ng-model="cliente.fields.Telefono" ng-maxlength="20" ng-pattern="telRegex" required>
+			    <span STYLE="color: red; font-size: 10pt" ng-show="clienteForm.telefono.$error.pattern || clienteForm.telefono.$invalid">* Teléfono inválido. Ej: 81234567 </span>
 			</div>
 			<div class = "padding" ng-if=" agregandoCliente ">
 				<button class="button button-block button-positive" ng-disabled="clienteForm.$invalid" ng-click="add()">
@@ -39,7 +39,7 @@
 	</div>
 
 	<!-- Lista de Vehículos -->
-	<div ng-if="mostrarListaVehiculos">
+	<div class= "padding" ng-if="mostrarListaVehiculos">
 		<h2 class="title">Vehículos</h2>
 		<div class="row header">
 		  <div class="col">Marca</div>
@@ -66,22 +66,22 @@
 			<h2 class="title">Agregar Vehículo</h2>
 		  	<label class="item item-input item-stacked-label">
 		  		<span class="input-label">Marca:</span>
-		    	<input type="text" name="marca" ng-minlength="2" ng-model="nuevoVehiculo.Marca" required>
+		    	<input type="text" name="marca" ng-minlength="2" ng-maxlength="15" ng-model="nuevoVehiculo.Marca" required>
 		    	<span STYLE="color: red; font-size: 10pt" ng-show="vehiculoForm.marca.$error.$invalid">* Marca inválida. Mínimo 2 caracteres *</span>
 		  	</label>
 		  	<label class="item item-input item-stacked-label">
 		  		<span class="input-label">Modelo:</span>
-		    	<input type="text" name="modelo" ng-minlength="1" ng-model="nuevoVehiculo.Modelo" required>
+		    	<input type="text" name="modelo" ng-minlength="1" ng-maxlength="15" ng-model="nuevoVehiculo.Modelo" required>
 		    	<span STYLE="color: red; font-size: 10pt" ng-show="vehiculoForm.modelo.$error.$invalid">* Modelo inválido. Mínimo 2 caracteres *</span>
 		  	</label>
 		  	<label class="item item-input item-stacked-label">
 		  		<span class="input-label">Año:</span>
-		    	<input type="number" name="anho" ng-minlength="4" ng-model="nuevoVehiculo.Anno" required>
+		    	<input type="number" name="anho" ng-minlength="4" ng-maxlength="4" ng-model="nuevoVehiculo.Anno" required>
 		    	<span STYLE="color: red; font-size: 10pt" ng-show="vehiculoForm.anho.$error.$invalid">* Año inválido. Ej: 2012 *</span>
 		  	</label>
 		  	<label class="item item-input item-stacked-label">
 		  		<span class="input-label">Placa:</span>
-		    	<input type="text" name="placa" ng-minlength="1" ng-model="nuevoVehiculo.Placa" required>
+		    	<input type="text" name="placa" ng-minlength="1" ng-maxlength="7" ng-model="nuevoVehiculo.Placa" required>
 		    	<span STYLE="color: red; font-size: 10pt" ng-show="vehiculoForm.placa.$error.$invalid">* Placa inválida. Mínimo 1 caracter *</span>
 		  	</label>
 	  	</form>
@@ -92,5 +92,7 @@
 		</button>
 	</div>
   </ion-content>
-
+  <ion-footer-bar class="bar-stable">
+  	<h1 class="title">Multiservicios La Margoth - Tel: 2556-8315</h1>
+  </ion-footer-bar>
 </ion-view>
